--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
             <div class="field-image-container">
                 <img class="field-image" src="images/image4.jpg">
             </div>
+            <div class="footer">
+                KHARKOV RELIEF FUND
+            </div>
         </div>
         <script>
             function updateAmount() {
