changes in text and added links

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <img class="image" src="images/relief.png">
             </div>
             <div class="text">
-                $1 will save someone's life in Ukraine.<br>Support volunteers to help people in need.
+                This donation goes to several volunteer groups in the eastern Ukrainian city Kharkiv. Our volunteers are Ukrainians from Kharkiv who could not sit by and do nothing, so they assembled a team that spreads over nearby cities. They work with delivering food, medicine and the humanitarian aid coming from all over the world to civilians and animals. They work with evacuation of civilians to safer areas and provide shelter to those who need it. By donating, you directly help those in need in this moment. Thank you for your donation!
             </div>
             <div class="donate-container">
                 <div class="donate-element-1">
@@ -30,19 +30,22 @@
                 <img class="field-image" src="images/image1.jpg">
             </div>
             <div class="text">
-                $1 is the price of bread in Ukraine.<br>Let's help Ukraine together now.
+                <p>Here you can see one of our heroes documenting how the donations are being used:</p>
+                <div class="link"><img src="images/instagram.png"><a target="_blank" href="https://instagram.com/ilchenko_vjacheslav?utm_medium=copy_link ">Ilchenko Vjacheslav</a></div>
             </div>
             <div class="field-image-container">
                 <img class="field-image" src="images/image2.jpg">
             </div>
             <div class="text">
-                For the price of a cup of coffee, you can help a victim in Ukraine.
+                <p>If you have any questions please contact us by email.</p>
+                <div class="link"><img src="images/mailicon.png"><a target="_blank" href="mailto:Kharkivhelppleas@gmail.com">Kharkiv Relief Fund</a></div>
             </div>
             <div class="field-image-container">
                 <img class="field-image" src="images/image3.jpg">
             </div>
             <div class="text">
-                
+                $1 will save someone's life in Ukraine.
+                Support volunteers to help people in need.
             </div>
             <div class="field-image-container">
                 <img class="field-image" src="images/image4.jpg">
