--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             </div>
             <div class="text">
                 <p>If you have any questions please contact us by email.</p>
-                <div class="link"><img src="images/mailicon.png"><a target="_blank" href="mailto:Kharkivhelppleas@gmail.com">Kharkiv Relief Fund</a></div>
+                <div class="link"><img src="images/mailicon.png"><a target="_blank" href="mailto:alina.sergeivna@gmail.com">Kharkiv Relief Fund</a></div>
             </div>
             <div class="field-image-container">
                 <img class="field-image" src="images/image3.jpg">
