--- a/index.html
+++ b/index.html
@@ -30,8 +30,9 @@
                 <img class="field-image" src="images/image5.jpg">
             </div>
             <div class="text">
-                <p>Here you can see one of our heroes documenting how the donations are being used:</p>
+                <p>Here you can see some of our heroes documenting how the donations are being used:</p>
                 <div class="link"><img src="images/instagram.png"><a target="_blank" href="https://instagram.com/ilchenko_vjacheslav?utm_medium=copy_link ">Ilchenko Vjacheslav</a></div>
+                <div class="link"><img src="images/instagram.png"><a target="_blank" href="https://instagram.com/volonterkharkiv?utm_medium=copy_link ">volonterkharkiv</a></div>
             </div>
             <div class="field-image-container">
                 <img class="field-image" src="images/image6.jpg">
