--- a/index.html
+++ b/index.html
@@ -15,11 +15,14 @@
             <div class="image-container">
                 <img class="image" src="images/relief.png">
             </div>
-            <div class="warning">
-                Donation link has been temporarily removed. We are looking for a way to avoid extensive paypal fees, and will be back in a few days.<br>
-                If you are Norwegian, you can use Vipps to send donations directly to the manager of the fund at +47 958 31 815.
+            <div class="donate-container">
+                <div class="donate-element-1">
+                    $<input id="amount" onchange="updateAmount()" class="donation-amount" type="number" value="1">
+                </div>
+                <div class="donate-element-2 disabled">
+                    <a disabled="disabled" id="link" href="https://www.paypal.com/donate/?cmd=_donations&item_name=Support%20volunteers%20and%20victims%20in%20Kharkiv&amount=1&currency_code=USD&business=alina.sergeivna@gmail.com" class="donate">DONATE</a>
+                </div>
             </div>
-
             <div class="text">
                 This donation goes to several volunteer groups in the eastern Ukrainian city Kharkiv. Our volunteers are Ukrainians from Kharkiv who could not sit by and do nothing, so they assembled a team that spreads over nearby cities. They work with delivering food, medicine and the humanitarian aid coming from all over the world to civilians and animals. They work with evacuation of civilians to safer areas and provide shelter to those who need it. By donating, you directly help those in need in this moment. Thank you for your donation!
             </div>
@@ -56,7 +59,7 @@
             function updateAmount() {
                 e = document.getElementById("amount");
                 link = document.getElementById("link");
-                link.href = "https://www.paypal.com/donate/?cmd=_donations&item_name=Support%20volunteers%20and%20victims%20in%20Kharkiv&amount="+e.value+"&currency_code=USD&business=Kharkivhelppleas@gmail.com"
+                link.href = "https://www.paypal.com/donate/?cmd=_donations&item_name=Support%20volunteers%20and%20victims%20in%20Kharkiv&amount="+e.value+"&currency_code=USD&business=alina.sergeivna@gmail.com"
             }
         </script>
     </body>
