--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     $<input id="amount" onchange="updateAmount()" class="donation-amount" type="number" value="1">
                 </div>
                 <div class="donate-element-2 disabled">
-                    <a disabled="disabled" id="link" href="https://www.paypal.com/donate/?cmd=_donations&item_name=Support%20volunteers%20and%20victims%20in%20Kharkiv&amount=1&currency_code=USD&business=alina.sergeivna@gmail.com" class="donate">DONATE</a>
+                    <a disabled="disabled" id="link" href="https://www.paypal.com/donate/?cmd=_donations&item_name=Support%20volunteers%20and%20victims%20in%20Kharkiv&amount=1&currency_code=USD&business=alina.glushchenko.sergeivna@gmail.com" class="donate">DONATE</a>
                 </div>
             </div>
             <div class="text">
@@ -59,7 +59,7 @@
             function updateAmount() {
                 e = document.getElementById("amount");
                 link = document.getElementById("link");
-                link.href = "https://www.paypal.com/donate/?cmd=_donations&item_name=Support%20volunteers%20and%20victims%20in%20Kharkiv&amount="+e.value+"&currency_code=USD&business=alina.sergeivna@gmail.com"
+                link.href = "https://www.paypal.com/donate/?cmd=_donations&item_name=Support%20volunteers%20and%20victims%20in%20Kharkiv&amount="+e.value+"&currency_code=USD&business=alina.glushchenko.sergeivna@gmail.com"
             }
         </script>
     </body>
